# brain_sidecar

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  stop.sh
brain_sidecar/: __init__.py  __main__.py  config.py
docs/: eval_harness.md  speaker_identity_architecture.md
media/: site.webmanifest
scripts/: build_energy_keyword_lexicon.py  dev.sh  fetch_test_audio.sh  gpu-env.sh  make_work_memory_known_audio.sh  test_e2e_integration.sh  test_hosted_caddy.sh  test_nemotron_streaming.py  test_user_audio.sh
tests/: conftest.py  open_source_review_fixtures.py  test_asr_streaming.py  test_audio_capture.py  test_browser_audio.py  test_company_ref_cards.py  test_company_refs.py  test_config.py  test_dedupe.py  test_devices.py  test_domain_keywords.py  test_energy_lens.py  test_eval_corpus_loader.py  test_eval_metrics.py  test_eval_noise.py  test_eval_replay.py  test_event_bus.py  test_gpu_arbitration.py  test_meeting_agents.py  test_meeting_contract.py  test_notes.py  test_notes_quality_gate.py  test_ollama_client.py  test_recall.py  test_review.py  test_review_asr.py  test_review_open_source_regression.py  test_session_browser_api.py  test_session_queues.py  test_session_retention.py  test_sidecar_cards.py  test_sidecar_events.py  test_speaker_identity.py  test_sse.py  test_storage.py  test_test_mode.py  test_transcript_consolidation.py  test_transcription_utils.py  test_usb_only_audio.py  test_web_context.py  (+3 more)
ui/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.hosted.config.ts  playwright.integration.config.ts  vite.config.ts  (+1 more)
(+82 files in other folders)
